--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <button>Buy Now</button></a
           >
                 <div class="gallery-item">
-          <img src="images/product 2.jpg" alt="Product 2" />
+          <img src="images/41x-mcbzCIL.jpg" alt="Product 2" />
           <h3>Portable Folding Clothes Hangers</h3><br>
           <p>₹699 <s>₹999</s></p><br>
           <a href="https://amzn.to/3Y3PdYP">
