--- a/webpages/products.html
+++ b/webpages/products.html
@@ -107,6 +107,17 @@
             <p class="product-price">₹399 <s>₹1499</s></p>
             <a href="https://amzn.to/3zWUeu1" class="buy-button">Buy Now</a>
           </div>
+             <div class="product-card">
+          <img
+            src="images 2/41x-mcbzCIL.jpg"
+            alt="Product 3"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-name">Portable Folding Clothes Hangers</h3>
+            <p class="product-price">₹699 <s>₹999</s></p>
+            <a href="https://amzn.to/3zZapad" class="buy-button">Buy Now</a>
+          </div>
         </div>
         </div>
       </div>
