--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
 
     <section class="product-gallery">
       <h2>Featured Products</h2>
+                <div class="gallery-item">
+          <img src="images/product 1.jpg" alt="Product 2" />
+          <h3>Multi-Functional Foam Cleaner </h3><br>
+          <p>₹700 <s>₹1,138</s></p><br>
+          <a href="https://amzn.to/3YzXtkQ"><button>Buy Now</button></a
+          >
+        </div>
                       <div class="gallery-item">
           <img src="images/41x-mcbzCIL.jpg" alt="Product 1" />
           <h3>Portable Folding Clothes Hangers</h3><br>
