--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <section class="product-gallery">
       <h2>Featured Products</h2>
+            <div class="gallery-grid">
                 <div class="gallery-item">
           <img src="images/product 3.jpg" alt="Product 4" />
           <h3>Multi-Functional Foam Cleaner </h3><br>
@@ -50,6 +51,8 @@
           <a href="https://amzn.to/3YzXtkQ"><button>Buy Now</button></a
           >
         </div>
+            </div>
+            <div class="gallery-grid">
                       <div class="gallery-item">
           <img src="images/41x-mcbzCIL.jpg" alt="Product 3" />
           <h3>Portable Folding Clothes Hangers</h3><br>
@@ -58,6 +61,7 @@
             <button>Buy Now</button></a
           >
         </div>
+            </div>
 
       <div class="gallery-grid">
         <div class="gallery-item">
