--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
             </div>
             <div class="gallery-grid">
-                      <div class="gallery-item">
+         <div class="gallery-item">
           <img src="images/41x-mcbzCIL.jpg" alt="Product 3" />
           <h3>Portable Folding Clothes Hangers</h3><br>
           <p>₹699 <s>₹999</s></p><br>
@@ -61,9 +61,7 @@
             <button>Buy Now</button></a
           >
         </div>
-            </div>
 
-      <div class="gallery-grid">
         <div class="gallery-item">
           <img src="images/product 1.jpg" alt="Product 1" />
           <h3>Automatic Sewing Needle Threader</h3><br>
@@ -78,6 +76,16 @@
           <a href="https://amzn.to/3zWUeu1">
             <button>Buy Now</button></a
           >
+        </div>
+        <div class="gallery-item">
+          <img src="images/Earphone.jpg" alt="Product 2" />
+          <h3>Mvc Enterprise Ultrapods 2 Pro Tws Earbud</h3><br>
+          <p>₹699 <s> ₹1499</s></p><br>
+          <a href="https://amzn.to/3NZyvFl">
+            <button>Buy Now</button></a
+          >
+        </div>
+            </div>
         </section>
 
     <footer>
