--- a/webpages/products.html
+++ b/webpages/products.html
@@ -83,9 +83,22 @@
     <div class="container">
       <h1>Products</h1>
       <div class="products">
-        <div class="product-card">
+           <div class="product-card">
           <img
             src="images 2/product 1.jpg"
+            alt="Product 4"
+            class="product-image"
+          />
+          <div class="product-info">
+            <h3 class="product-name">Mvc Enterprise Ultrapods 2 Pro Tws Earbud</h3>
+            <p class="product-description"></p>
+            <p class="product-price">₹699 <s>₹1499</s></p>
+            <a href="https://amzn.to/3NZyvFl" class="buy-button">Buy Now</a>
+          </div>
+        </div>
+        <div class="product-card">
+          <img
+            src="images 2/Earphone.jpg"
             alt="Product 1"
             class="product-image"
           />
