--- a/index.html
+++ b/index.html
@@ -44,8 +44,16 @@
     <section class="product-gallery">
       <h2>Featured Products</h2>
             <div class="gallery-grid">
+               <div class="gallery-item">
+          <img src="images/product 7.jpg" alt="Product 6" />
+          <h3>Heavy Duty Appliances Roller</h3><br>
+          <p>₹979 <s> ₹2,499</s></p><br>
+          <a href="https://amzn.to/3Z3vtov">
+            <button>Buy Now</button></a
+          >
+        </div>
                 <div class="gallery-item">
-          <img src="images/product 3.jpg" alt="Product 4" />
+          <img src="images/product 3.jpg" alt="Product 5" />
           <h3>Multi-Functional Foam Cleaner </h3><br>
           <p>₹700 <s>₹1,138</s></p><br>
           <a href="https://amzn.to/3YzXtkQ"><button>Buy Now</button></a
@@ -54,7 +62,7 @@
             </div>
             <div class="gallery-grid">
          <div class="gallery-item">
-          <img src="images/41x-mcbzCIL.jpg" alt="Product 3" />
+          <img src="images/41x-mcbzCIL.jpg" alt="Product 4" />
           <h3>Portable Folding Clothes Hangers</h3><br>
           <p>₹699 <s>₹999</s></p><br>
           <a href="https://amzn.to/3Y3PdYP">
@@ -63,7 +71,7 @@
         </div>
 
         <div class="gallery-item">
-          <img src="images/product 1.jpg" alt="Product 1" />
+          <img src="images/product 1.jpg" alt="Product 3" />
           <h3>Automatic Sewing Needle Threader</h3><br>
           <p>₹149 <s>₹199</s></p><br>
           <a href="https://amzn.to/4dFqgZu"><button>Buy Now</button></a
@@ -78,7 +86,7 @@
           >
         </div>
         <div class="gallery-item">
-          <img src="images/Earphone.jpg" alt="Product 2" />
+          <img src="images/Earphone.jpg" alt="Product 1" />
           <h3>Mvc Enterprise Ultrapods 2 Pro Tws Earbud</h3><br>
           <p>₹699 <s> ₹1499</s></p><br>
           <a href="https://amzn.to/3NZyvFl">
