--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
         <p>₹699 <s>₹1,499</s></p>
         <a href="https://amzn.to/3NZyvFl" class="buy-button">Buy Now</a>
       </div>
+      <!-- Product 7 -->
+      <div class="gallery-item">
+        <img src="images/product8.jpg" alt="Milisten Box Universal Car Accessories" />
+        <h3>Milisten Box Universal Car Accessories</h3>
+        <p>₹5,052 <s>₹10,104</s></p>
+        <a href="https://amzn.to/3B8oFhk" class="buy-button">Buy Now</a>
+      </div>
     </div>
   </section>
 
