--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="images/icon.png" alt="Logo" />
+      <img src="/images/icon.png" alt="Logo" />
     </div>
     <div class="hamburger" id="hamburger" aria-label="Toggle navigation">
       <div></div>
@@ -45,49 +45,49 @@
     <div class="gallery-grid">
       <!-- Product 1 -->
       <div class="gallery-item">
-        <img src="images/product7.jpg" alt="Heavy Duty Appliances Roller" />
+        <img src="/images/product7.jpg" alt="Heavy Duty Appliances Roller" />
         <h3>Heavy Duty Appliances Roller</h3>
         <p>₹979 <s>₹2,499</s></p>
         <a href="https://amzn.to/3Z3vtov" class="buy-button">Buy Now</a>
       </div>
       <!-- Product 2 -->
       <div class="gallery-item">
-        <img src="images/product3.jpg" alt="Multi-Functional Foam Cleaner" />
+        <img src="/images/product3.jpg" alt="Multi-Functional Foam Cleaner" />
         <h3>Multi-Functional Foam Cleaner</h3>
         <p>₹700 <s>₹1,138</s></p>
         <a href="https://amzn.to/3YzXtkQ" class="buy-button">Buy Now</a>
       </div>
       <!-- Product 3 -->
       <div class="gallery-item">
-        <img src="images/41x-mcbzCIL.jpg" alt="Portable Folding Clothes Hangers" />
+        <img src="/images/41x-mcbzCIL.jpg" alt="Portable Folding Clothes Hangers" />
         <h3>Portable Folding Clothes Hangers</h3>
         <p>₹699 <s>₹999</s></p>
         <a href="https://amzn.to/3Y3PdYP" class="buy-button">Buy Now</a>
       </div>
       <!-- Product 4 -->
       <div class="gallery-item">
-        <img src="images/product1.jpg" alt="Automatic Sewing Needle Threader" />
+        <img src="/images/product1.jpg" alt="Automatic Sewing Needle Threader" />
         <h3>Automatic Sewing Needle Threader</h3>
         <p>₹149 <s>₹199</s></p>
         <a href="https://amzn.to/4dFqgZu" class="buy-button">Buy Now</a>
       </div>
       <!-- Product 5 -->
       <div class="gallery-item">
-        <img src="images/product2.jpg" alt="Romantic Tulip Night Light" />
+        <img src="/images/product2.jpg" alt="Romantic Tulip Night Light" />
         <h3>Romantic Tulip Night Light</h3>
         <p>₹399 <s>₹1,499</s></p>
         <a href="https://amzn.to/3zWUeu1" class="buy-button">Buy Now</a>
       </div>
       <!-- Product 6 -->
       <div class="gallery-item">
-        <img src="images/Earphone.jpg" alt="Mvc Enterprise Ultrapods 2 Pro" />
+        <img src="/images/Earphone.jpg" alt="Mvc Enterprise Ultrapods 2 Pro" />
         <h3>Mvc Enterprise Ultrapods 2 Pro</h3>
         <p>₹699 <s>₹1,499</s></p>
         <a href="https://amzn.to/3NZyvFl" class="buy-button">Buy Now</a>
       </div>
       <!-- Product 7 -->
       <div class="gallery-item">
-        <img src="images/product8.jpg" alt="Milisten Box Universal Car Accessories" />
+        <img src="/images/product8.jpg" alt="Milisten Box Universal Car Accessories" />
         <h3>Milisten Box Universal Car Accessories</h3>
         <p>₹5,052 <s>₹10,104</s></p>
         <a href="https://amzn.to/3B8oFhk" class="buy-button">Buy Now</a>
